[gd_scene load_steps=4 format=3 uid="uid://es3xnd1snslt"]

[ext_resource type="Script" path="res://src/ui/CardGhost.gd" id="1_ruca6"]
[ext_resource type="PackedScene" uid="uid://bdfnnjgo2jc4p" path="res://scn/game/CardBorderComponent.tscn" id="2_iqn6l"]
[ext_resource type="Script" path="res://lib/identifiers/ICardInstance.gd" id="3_n6cvr"]

[node name="CardGhost" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ruca6")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardBorderComponent" parent="TextureRect" instance=ExtResource("2_iqn6l")]
layout_mode = 1

[node name="ICardInstance" type="Node" parent="."]
script = ExtResource("3_n6cvr")
